--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
+            background: linear-gradient(135deg, #1e3c72, #2a5298); /* Mavi-yeşil geçiş */
             color: #fff;
             display: flex;
             justify-content: center;
@@ -32,7 +32,7 @@
             margin-bottom: 20px;
             font-size: 1.6em;
             font-weight: bold;
-            color: #ffd700; /* Altın rengi */
+            color: #00ff88; /* Yeşil rengi */
         }
 
         #countdown {
@@ -55,7 +55,7 @@
             margin-top: 5px;
             font-weight: bold;
             text-transform: uppercase;
-            color: #ffd700; /* Altın rengi */
+            color: #00ff88; /* Yeşil rengi */
         }
 
         @media (max-width: 600px) {
